[package]
name = "novagrep"
version = "0.1.0"
edition = "2024"
description = "Custom implementation of grep with custom additions."
authors = ["LowByteFox <firethefox77@gmail.com>"]
readme = "README.md"
repository = "https://github.com/LowByteFox/novagrep"
license = "BSD-2-Clause"
keywords = ["grep", "pattern", "regex", "search"]
categories = ["command-line-utilities"]

[dependencies]
getargs = "0.5.0"
regex = "1.11.1"
